istio_examples/webapp-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-flask-app
spec:
  hosts:
  - "tfg.com"
  gateways:
  - flask-gateway
  http:
  - match:
    - headers:
        type:
          exact: "light"
    route:
    - destination:
        host: webapp
        subset: version-v1
  - route:
    - destination:
        host: webapp
        subset: version-v2
