istio_examples/wepapp-v2-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-flask-app
spec:
  hosts:
  - "tfg.com"
  gateways:
  - flask-gateway
  http:
  - route:
    - destination:
        host: webappv2
        port:
          number: 80
